@@ -1,3 +1,7 @@
+1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* objectbase.h: Update documentation tags.
+
 1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* objectbase.h: Include defobj.h.
